--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,7 +87,6 @@ target_link_libraries(nigiri PUBLIC cista geo utl fmt date miniz date-tz wyhash 
 target_compile_features(nigiri PUBLIC cxx_std_23)
 target_compile_options(nigiri PRIVATE ${nigiri-compile-options})
 
-
 # --- MAIN ---
 file(GLOB_RECURSE nigiri-server-files server/main.cc)
 add_executable(nigiri-server ${nigiri-server-files})
@@ -116,5 +115,5 @@ configure_file(
 file(GLOB_RECURSE nigiri-test-files test/*.cc)
 add_executable(nigiri-test ${nigiri-test-files})
 target_include_directories(nigiri-test PRIVATE include)
-target_link_libraries(nigiri-test nigiri gtest ianatzdb-res nigiri-generated)
+target_link_libraries(nigiri-test nigiri gtest ianatzdb-res nigiri-generated pugixml)
 target_compile_options(nigiri-test PRIVATE ${nigiri-compile-options})
