--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,33 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
         -Wno-duplicate-enum
         -Werror)
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
-  set(nigiri-compile-options -Wall -Wextra -Werror)
+  #set(nigiri-compile-options -Wall -Wextra -Werror)
+  set(nigiri-compile-options
+        -Weverything
+        -Wno-c++98-compat
+        -Wno-c++98-compat-pedantic
+        -Wno-newline-eof
+        -Wno-missing-prototypes
+        -Wno-padded
+        -Wno-double-promotion
+        -Wno-undef
+        -Wno-undefined-reinterpret-cast
+        -Wno-float-conversion
+        -Wno-global-constructors
+        -Wno-exit-time-destructors
+        -Wno-switch-enum
+        -Wno-c99-designator
+        -Wno-zero-as-null-pointer-constant
+        -Wno-missing-noreturn
+        -Wno-undefined-func-template
+        -Wno-unsafe-buffer-usage
+        -Wno-c++20-compat
+        -Wno-reserved-macro-identifier
+        -Wno-documentation-unknown-command
+        -Wno-duplicate-enum
+        -Wno-float-equal
+        #-Wno-poison-system-directories
+        -Werror)
 elseif (MSVC)
   set(nigiri-compile-options /WX)
 else ()
@@ -105,11 +131,11 @@ add_executable(nigiri-benchmark ${nigiri-benchmark-files})
 target_link_libraries(nigiri-benchmark PRIVATE nigiri boost-program_options ianatzdb-res)
 target_compile_features(nigiri-benchmark PUBLIC cxx_std_23)
 
-# --- BENCHMARK MEAT CSA---
-file(GLOB_RECURSE nigiri-meat-csa-files exe/run_meat_csa.cc)
-add_executable(nigiri-meat-csa ${nigiri-meat-csa-files})
-target_link_libraries(nigiri-meat-csa PRIVATE nigiri boost-program_options ianatzdb-res)
-target_compile_features(nigiri-meat-csa PUBLIC cxx_std_23)
+# --- BENCHMARK MEAT---
+file(GLOB_RECURSE nigiri-meat-benchmark-files exe/run_meat.cc)
+add_executable(nigiri-meat-benchmark ${nigiri-meat-benchmark-files})
+target_link_libraries(nigiri-meat-benchmark PRIVATE nigiri boost-program_options ianatzdb-res)
+target_compile_features(nigiri-meat-benchmark PUBLIC cxx_std_23)
 
 # --- TEST ---
 add_library(nigiri-generated INTERFACE)
