uncommented commented code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,12 +63,9 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
             -Wno-documentation-unknown-command
             -Wno-duplicate-enum
             -Wno-switch-default
-#            -Werror
-    )
+            -Werror)
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
-    set(nigiri-compile-options -Wall -Wextra
-#            -Werror
-    )
+    set(nigiri-compile-options -Wall -Wextra -Werror)
 elseif (MSVC)
     set(nigiri-compile-options /WX)
 else ()
@@ -77,9 +74,7 @@ else ()
             -Wextra
             -Wno-maybe-uninitialized)
     if (NOT CMAKE_CROSSCOMPILING)
-        set(nigiri-compile-options ${nigiri-compile-options}
-#                -Werror
-        )
+        set(nigiri-compile-options ${nigiri-compile-options} -Werror)
     endif ()
 endif ()
 
