--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,44 +81,6 @@ else ()
 endif ()
 
 
-# --- LIB ---
-file(GLOB_RECURSE nigiri-files src/*.cc)
-add_library(nigiri ${nigiri-files})
-target_include_directories(nigiri PUBLIC include)
-target_link_libraries(nigiri PUBLIC cista geo utl fmt date miniz date-tz wyhash unordered_dense gtfsrt oh opentelemetry_api pugixml)
-target_compile_features(nigiri PUBLIC cxx_std_23)
-target_compile_options(nigiri PRIVATE ${nigiri-compile-options})
-
-if (NIGIRI_CUDA)
-  if (MSVC)
-    set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -lineinfo -lcudadevrt")
-  else()
-    set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -lineinfo --compiler-options -static")
-  endif()
-  enable_language(CUDA)
-
-  find_package(CUDAToolkit REQUIRED)
-  file(GLOB_RECURSE nigiri-gpu-files src/*.cu)
-  add_library(nigiri-gpu SHARED ${nigiri-gpu-files})
-  set_target_properties(nigiri-gpu PROPERTIES
-    WINDOWS_EXPORT_ALL_SYMBOLS ON
-    CUDA_SEPARABLE_COMPILATION ON
-    CUDA_STANDARD 17
-    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
-    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
-    INSTALL_RPATH "$ORIGIN/../lib:$ORIGIN/"
-  )
-  include_directories(${CUDAToolkit_INCLUDE_DIRS})
-  target_include_directories(nigiri-gpu PUBLIC include)
-  set_property(TARGET nigiri-gpu PROPERTY CUDA_ARCHITECTURES native)
-  target_link_libraries(nigiri-gpu ${CUDAToolkit_LIBRARIES})
-  target_link_libraries(nigiri-gpu PRIVATE cista fmt date unordered_dense geo utl)
-  target_compile_definitions(nigiri-gpu PRIVATE NIGIRI_CUDA=1)
-  set_property(TARGET nigiri-gpu PROPERTY CUDA_STANDARD 23)
-
-  target_link_libraries(nigiri PRIVATE nigiri-gpu)
-endif()
-
 # --- MAIN ---
 file(GLOB_RECURSE nigiri-server-files server/main.cc)
 add_executable(nigiri-server ${nigiri-server-files})
@@ -155,3 +117,44 @@ add_executable(nigiri-test ${nigiri-test-files})
 target_include_directories(nigiri-test PRIVATE include)
 target_link_libraries(nigiri-test nigiri gtest ianatzdb-res nigiri-generated)
 target_compile_options(nigiri-test PRIVATE ${nigiri-compile-options})
+
+
+# --- LIB ---
+file(GLOB_RECURSE nigiri-files src/*.cc)
+add_library(nigiri ${nigiri-files})
+target_include_directories(nigiri PUBLIC include)
+target_link_libraries(nigiri PUBLIC cista geo utl fmt date miniz date-tz wyhash unordered_dense gtfsrt oh opentelemetry_api pugixml)
+target_compile_features(nigiri PUBLIC cxx_std_23)
+target_compile_options(nigiri PRIVATE ${nigiri-compile-options})
+
+if (NIGIRI_CUDA)
+  if (MSVC)
+    set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -lineinfo -lcudadevrt")
+  else()
+    set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -lineinfo --compiler-options -static")
+  endif()
+  enable_language(CUDA)
+
+  find_package(CUDAToolkit REQUIRED)
+  find_package(CUDA REQUIRED)
+  file(GLOB_RECURSE nigiri-gpu-files src/*.cu)
+  add_library(nigiri-gpu OBJECT ${nigiri-gpu-files})
+  set_target_properties(nigiri-gpu PROPERTIES
+          WINDOWS_EXPORT_ALL_SYMBOLS ON
+          CUDA_SEPARABLE_COMPILATION ON
+          CUDA_STANDARD 23
+          RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
+          LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
+          INSTALL_RPATH "$ORIGIN/../lib:$ORIGIN/"
+  )
+  include_directories(${CUDAToolkit_INCLUDE_DIRS})
+  target_include_directories(nigiri-gpu PUBLIC include)
+  set_property(TARGET nigiri-gpu PROPERTY CUDA_ARCHITECTURES native)
+  target_link_libraries(nigiri-gpu ${CUDAToolkit_LIBRARIES})
+  target_link_libraries(nigiri-gpu PRIVATE cista fmt date unordered_dense geo utl)
+  target_compile_definitions(nigiri-gpu PRIVATE NIGIRI_CUDA=1)
+  set_property(TARGET nigiri-gpu PROPERTY CUDA_STANDARD 23)
+
+  target_link_libraries(nigiri PUBLIC nigiri-gpu)
+  set_property(TARGET nigiri-test PROPERTY CUDA_SEPARABLE_COMPILATION ON)
+endif()
