--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,7 +134,7 @@ if (NIGIRI_CUDA)
   if (MSVC)
     set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -lineinfo -lcudadevrt")
   else()
-    set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -lineinfo --compiler-options -static")
+    set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --expt-relaxed-constexpr -lineinfo --compiler-options -static")
   endif()
   enable_language(CUDA)
 
@@ -152,8 +152,7 @@ if (NIGIRI_CUDA)
   )
   target_include_directories(nigiri-gpu PUBLIC include ${CUDAToolkit_INCLUDE_DIRS})
   set_property(TARGET nigiri-gpu PROPERTY CUDA_ARCHITECTURES native)
-  target_link_libraries(nigiri-gpu PRIVATE CCCL::CCCL nigiri cista fmt date unordered_dense geo utl)
-  target_compile_definitions(nigiri-gpu PRIVATE NIGIRI_CUDA=1)
+  target_link_libraries(nigiri-gpu PRIVATE cista fmt date unordered_dense geo utl)
 
   target_link_libraries(nigiri-test PRIVATE nigiri-gpu)
   set_property(TARGET nigiri-test PROPERTY CUDA_SEPARABLE_COMPILATION ON)
