--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,4 +135,5 @@ file(GLOB_RECURSE nigiri-test-files test/*.cc)
 add_executable(nigiri-test ${nigiri-test-files})
 target_include_directories(nigiri-test PRIVATE include)
 target_link_libraries(nigiri-test nigiri gmock ianatzdb-res nigiri-generated)
+target_compile_features(nigiri-test PUBLIC cxx_std_23)
 target_compile_options(nigiri-test PRIVATE ${nigiri-compile-options})
