--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,6 +104,9 @@ target_link_libraries(
   sol2
   libluajit
   proj
+  PRIVATE
+  boost-iostreams
+  zlibstatic
 )
 target_compile_features(nigiri PUBLIC cxx_std_23)
 target_compile_options(nigiri PRIVATE ${nigiri-compile-options})
