--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,13 +103,6 @@ jobs:
 
   macos:
     runs-on: macos-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        config:
-          - preset: macos-x86_64
-            tests: On
-          - preset: macos-arm64
     env:
       BUILDCACHE_COMPRESS: true
       BUILDCACHE_DIRECT_MODE: true
@@ -134,11 +127,11 @@ jobs:
         id: restore-buildcache
         with:
           path: ${{ github.workspace }}/.buildcache
-          key: buildcache-${{ matrix.config.preset }}-${{ hashFiles('.pkg') }}-${{ hashFiles('**/*.h') }}-${{ hashFiles('**/*.cc') }}
+          key: buildcache-macos-${{ hashFiles('.pkg') }}-${{ hashFiles('**/*.h') }}-${{ hashFiles('**/*.cc') }}
           restore-keys: |
-            buildcache-${{ matrix.config.preset }}-${{ hashFiles('.pkg') }}-${{ hashFiles('**/*.h') }}-
-            buildcache-${{ matrix.config.preset }}-${{ hashFiles('.pkg') }}-
-            buildcache-${{ matrix.config.preset }}-
+            buildcache-macos-${{ hashFiles('.pkg') }}-${{ hashFiles('**/*.h') }}-
+            buildcache-macos-${{ hashFiles('.pkg') }}-
+            buildcache-macos-
 
       - name: Dependencies Cache
         uses: actions/cache@v3
@@ -149,7 +142,7 @@ jobs:
 
       # ==== BUILD ====
       - name: CMake
-        run: cmake -G Ninja -S . -B build --preset=${{ matrix.config.preset }}
+        run: cmake -G Ninja -S . -B build --preset=macos-arm64
 
       - name: Build
         run: |
@@ -159,7 +152,6 @@ jobs:
 
       # ==== TESTS ====
       - name: Run Tests
-        if: matrix.config.tests == 'On'
         run: build/nigiri-test
 
       # ==== SAVE CACHE ====
